# clay-plyght

./: .gitignore  Cargo.toml  README.md  benchmark.sh  fnpm-lock.json  package.json  uninstall.sh
.zed/: settings.json
scripts/: install.sh
src/: bundler.rs  cli_style.rs  content_store.rs  dev_server.rs  main.rs  npm_client.rs  package_info.rs  package_manager.rs  workspace.rs
test-bun-compatibility/: clay-lock.toml
