[package]
name = "clay"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "clay"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
fs_extra = "1.3"
indicatif = "0.17"
console = "0.15"
spinners = "4.1"
owo-colors = "4.0"
sha1 = "0.10"
dirs = "5.0"
toml = "0.8"
regex = "1.10"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
dashmap = "5.5"
flate2 = "1.0"
tar = "0.4"
